Fix width of column 2 (there was white space to the right).

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -122,7 +122,7 @@ header nav div:hover, .dropdown:hover .dropdown-content {
 /* Column 1 */
 
 .column_1 {
-  width: 25%;
+  width: 20%;
   max-width: 12rem;
   min-width: 8rem;
   padding: 0 10px;
@@ -219,7 +219,7 @@ header nav div:hover, .dropdown:hover .dropdown-content {
 /* Column 2 */
 
 .column_2 {
-  width: 75%;
+  width: 80%;
   padding: 0 0.5rem;
 }
 
